--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>cristiano-ronaldo</title>
 </head>
 <body>
+    <header>
+        <ul>
+            <li>funk</li>
+            <li>trap</li>
+            <li>pagode</li>
+        </ul>
+    </header>
 <h1>aq e o paulo</h1>
 </body>
 </html>
