--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-        <ul>
-            <li>funk</li>
-            <li>trap</li>
-            <li>pagode</li>
+        <ul class="nav-lista">
+            <li class="nav-item">funk</li>
+            <li class="nav-item">trap</li>
+            <li class="nav-item">pagode</li>
         </ul>
     </header>
 <h1>aq e o paulo</h1>
