--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
             <li class="nav-item">pagode</li>
         </ul>
     </header>
-<h1>aq e o paulo</h1>
+
+<main>
+  <section class="secao">
+<div class="titulo_section">
+    <h1>funk</h1>
+</div>
+<ul class="moldura_videos">
+    <li class="video"></li>
+    <li class="video"></li>
+    <li class="video"></li>
+</ul>
+  </section>
+<main>
+
 </body>
 </html>
