--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <li class="nav-item">trap</li>
             <li class="nav-item">pagode</li>
         </ul>
+
+        
     </header>
 
 <main>
@@ -22,12 +24,13 @@
     <h1>funk</h1>
 </div>
 <ul class="moldura_videos">
-    <li class="video"></li>
-    <li class="video"></li>
-    <li class="video"></li>
+    <li class="video"><iframe width="1280" height="720" src="https://www.youtube.com/embed/jAFaY_UXaYo" title="Roberto Carlos - O Calhambeque (Road Hog) (Áudio Oficial)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></li>
+    <li class="video"><iframe width="1280" height="720" src="https://www.youtube.com/embed/r3Pr1_v7hsw" title="Foreigner - I Want To Know What Love Is (Official Music Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></li>
+    <li class="video"><iframe width="1280" height="720" src="https://www.youtube.com/embed/fDrTbLXHKu8" title="Skrillex &amp; Diplo - &quot;Mind&quot; feat. Kai (Official Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></li>
 </ul>
   </section>
 <main>
 
 </body>
+
 </html>
